--- a/src/widgets/Layout/components/MobileMenu/MobileMenu.module.scss
+++ b/src/widgets/Layout/components/MobileMenu/MobileMenu.module.scss
@@ -6,6 +6,7 @@
   z-index: 1;
   display: flex;
   flex-direction: column;
+  margin-top: 5px;
   padding: 20px;
   background: var(--white);
 
